# Orbit

./: .gitignore  LICENSE  README.ar.md  README.md  SECURITY.md  SteamSwitch.bat  app.py  build_sidecar.py  webapp.py
core/: covers.py  switcher.py
src/: CMakeLists.txt  README.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/core/: custom_games.cpp  custom_games.h  epic_games.cpp  epic_games.h  gog_games.cpp  gog_games.h  model.cpp  model.h  platform.h  platform_posix.cpp  platform_win.cpp  settings.cpp  settings.h  store_covers.cpp  updates.cpp  updates.h  version.h
src/core/stores/: custom_store.cpp  epic_store.cpp  gog_store.cpp  store.h
src/tests/: test_custom.cpp  test_epic.cpp  test_gog.cpp  test_settings.cpp  test_store_covers.cpp  test_updates.cpp
src/tools/: make-release-zip.ps1  make_orbit_icon.py  ssdiag.cpp
src/ui/: Backend.cpp  Backend.h  GameModel.cpp  GameModel.h  main.cpp  orbit.rc
src/ui/i18n/: ar.qm  ar.ts
src/ui/qml/: AccountsView.qml  AddGameDialog.qml  AmbientBackground.qml  AppScrollBar.qml  AppState.qml  DetailView.qml  FilterChip.qml  GameCard.qml  LibraryView.qml  Main.qml  ManagePanel.qml  OnboardingOverlay.qml  SettingsView.qml  SideNavItem.qml  StoreChip.qml  Theme.qml  Toggle.qml
tests/: smoke_test.py
web/: index.html
