[package]
name = "steamswitch"
version = "0.1.0"
description = "SteamSwitch — Steam multi-account launcher"
edition = "2021"
rust-version = "1.77"

# The Rust shell is a thin host: it opens the window (WebView2 inits async, so no
# freeze), spawns + supervises the Python sidecar (server.py / server.exe), and
# injects the sidecar URL into the page. All app logic stays in core/* via the
# sidecar; there is no Rust business logic here.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
strip = true
